--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,11 @@ dependencies {
      compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     compile 'com.parse:parsefacebookutils-v4-android:1.10.3@aar'
     compile 'com.parse:parsetwitterutils-android:1.10.3'
-}
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.androidanimations:library:1.0.3@aar'
+        compile "com.android.support:support-v4:+"
+        compile 'com.squareup.picasso:picasso:2.3.2'
+        compile 'com.nineoldandroids:library:2.4.0'
+        compile 'com.daimajia.slider:library:1.1.5@aar'
+    }
+
