--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
         compile 'com.squareup.picasso:picasso:2.3.2'
         compile 'com.nineoldandroids:library:2.4.0'
         compile 'com.daimajia.slider:library:1.1.5@aar'
-    }
+    compile 'com.paypal.sdk:paypal-android-sdk:2.13.1'              //Changed
+}
 
