--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -62,7 +63,10 @@
             android:name="com.parse.CLIENT_KEY"
             android:value="HRojisi1rlxIvXPWkpnXMu82CMHumITyhccPJcfh" />
 
-        <activity android:name=".AddFriends"></activity>
+        <activity android:name=".TabBarActivity"
+            android:theme="@style/AppTheme">
+
+        </activity>
     </application>
 
 </manifest>
