--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -63,10 +62,11 @@
             android:name="com.parse.CLIENT_KEY"
             android:value="HRojisi1rlxIvXPWkpnXMu82CMHumITyhccPJcfh" />
 
-        <activity android:name=".TabBarActivity"
-            android:theme="@style/AppTheme">
-
-        </activity>
+        <activity
+            android:name=".TabBarActivity"
+            android:theme="@style/AppTheme"></activity>
+        <activity android:name=".AddFriends"></activity>
+        <activity android:name=".ListRestaurant"></activity>
     </application>
 
 </manifest>
